<resources>

    <string name="app_name">match scheduller</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="away">Away</string>
    <string name="home1">Home</string>
    <string name="_0">0</string>
    <string name="goal_detail">Goal Detail</string>
    <string name="lineup_kiper">Lineup Kiper</string>
    <string name="lineup_defender">Lineup Defender</string>
    <string name="lineup_mid">lineup mid</string>
    <string name="lineup_forward">Lineup Forward</string>
    <string name="favorite_team">favorite Team</string>
    <string name="favourite">favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="liga">Liga</string>
    <string name="teams">Teams</string>
    <string name="todo">TODO</string>
    <string name="andrea_tani">Andrea Tani</string>
    <string name="weight">Weight</string>
    <string name="_2_kuintal">2 kuintal</string>
    <string name="time">time</string>
    <string name="search_match">Search Match</string>
    <string name="image_league">image_league</string>
    <string name="name_league">Name League</string>
    <string name="image_league_detail">Image League Detail</string>
    <string name="name_player">Name Player</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string-array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>

    <string-array name="image_league">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/m7urjx1535732496.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/mmd1de1541938367.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png</item>
    </string-array>
</resources>
