<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.PlayerDetail">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/progress_player_detail"/>

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarPlayer"
            android:padding="16dp">
        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:id="@+id/thumb_player"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher_round"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_player"
                android:textAlignment="center"
                android:id="@+id/text_name_player_detail"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_position"
                android:text="@string/_2_kuintal"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"/>

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:fitsSystemWindows="true"
                android:id="@+id/toolbar_player_detail"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/relative_info"
            android:padding="16dp"
            android:layout_below="@id/appBarPlayer">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weight"
                android:text="@string/weight"
                android:textSize="20sp"
                android:layout_alignParentStart="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_weight"
                android:text="@string/_2_kuintal"
                android:layout_below="@+id/weight"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="13dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Height"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_height"
                android:text="@string/_2_kuintal"
                android:layout_below="@+id/weight"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="14dp"
                tools:ignore="RtlHardcoded"/>
    </RelativeLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_desc_player"
            android:layout_marginTop="20dp"
            android:paddingStart="16dp"
            android:text="@string/app_name"
            android:layout_below="@id/relative_info"
            tools:ignore="RtlSymmetry"/>
</RelativeLayout>
</ScrollView>