<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/dateDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yyyy_mm_dd"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center">
            <LinearLayout
                    android:id="@+id/contHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/contAway"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@mipmap/ic_launcher_round"
                        android:id="@+id/imgAway"
                        android:contentDescription="@string/todo"/>
                <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/away"
                        android:id="@+id/nameAway"
                        android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/contAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="200dp"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@mipmap/ic_launcher_round"
                        android:id="@+id/imgHome"
                        android:contentDescription="@string/todo"/>
                <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/home1"
                        android:id="@+id/nameHome"
                        android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/homeGoalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="20sp"
                    android:layout_toEndOf="@id/contHome"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="-250dp"/>

            <TextView
                    android:id="@+id/awayGoalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="20sp"
                    android:layout_toEndOf="@id/contHome"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="-83dp"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ListView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/homeGoalDetail"
                    android:textAlignment="center"
                    tools:ignore="NestedScrolling"/>
            <TextView
                    android:layout_marginStart="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_detail"
                    android:id="@+id/goalDetail"
                    android:layout_toEndOf="@id/homeGoalDetail"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentTop="true"/>
            <ListView
                    android:layout_width="100dp"
                    android:layout_toEndOf="@id/goalDetail"
                    android:layout_marginStart="36dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/awayGoalDetail"
                    android:textAlignment="center"
                    android:layout_alignParentTop="true"
                    tools:ignore="NestedScrolling"/>
        </RelativeLayout>
        <android.widget.ProgressBar
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/progress_Bar"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/LineupKiper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineup_kiper"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="130dp"
                    tools:ignore="RelativeOverlap"/>
            <ListView
                    android:id="@+id/homeLineupKiper"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:ignore="NestedScrolling"/>
            <ListView
                    android:id="@+id/AwayLineupKiper"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    tools:ignore="NestedScrolling"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/homeLineupDefender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineup_defender"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="130dp"
                    tools:ignore="RelativeOverlap"/>
            <ListView
                    android:id="@+id/HomeLineupDefender"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:ignore="NestedScrolling"/>
            <ListView
                    android:id="@+id/AwayLineupDefender"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    tools:ignore="NestedScrolling"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/LineupMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineup_mid"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="150dp"
                    tools:ignore="RelativeOverlap"/>
            <ListView
                    android:id="@+id/HomeLineupMid"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:ignore="NestedScrolling"/>
            <ListView
                    android:id="@+id/AwayLineupMid"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    tools:ignore="NestedScrolling"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/LineupForward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineup_forward"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="130dp"
                    tools:ignore="RelativeOverlap"/>
            <ListView
                    android:id="@+id/HomeLineupForward"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:ignore="NestedScrolling"/>
            <ListView
                    android:id="@+id/AwayLineupForward"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    tools:ignore="NestedScrolling"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/LineupSubs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineup_defender"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="130dp"
                    tools:ignore="RelativeOverlap"/>
            <ListView
                    android:id="@+id/HomeLineupSubs"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:ignore="NestedScrolling"/>
            <ListView
                    android:id="@+id/AwayLineupSubs"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true" tools:ignore="NestedScrolling"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>