<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".team.TeamDetail">



    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="?actionBarSize"
                    android:paddingTop="24dp"
                    app:layout_collapseMode="parallax">

                <ImageView
                        android:id="@+id/ic_club"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_launcher_round" />

                <TextView
                        android:id="@+id/text_name"
                        android:layout_below="@id/ic_club"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teams"
                        android:textAlignment="center" />

                <TextView
                        android:id="@+id/text_since"
                        android:layout_below="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAlignment="center" />

                <TextView
                        android:id="@+id/text_stadium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teams"
                        android:layout_below="@id/text_since"
                        android:textAlignment="center" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="top"
                    app:layout_collapseMode="parallax"
                    app:titleMarginTop="16dp" />

            <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    app:tabMode="fixed" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_detail"/>
</android.support.design.widget.CoordinatorLayout>